--- a/main.css
+++ b/main.css
@@ -167,6 +167,8 @@ body {
     }
     .card .card-container .result {
         min-width: 87%;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
         align-self: center;
     }
     .card .card-container .result .info{
